--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.github.humbergroup</groupId>
+    <groupId>com.github.humbergroup</groupId>
     <artifactId>soccer-api</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
@@ -25,6 +25,11 @@
             <artifactId>jakarta.jakartaee-api</artifactId>
             <version>${jakartaee.version}</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.humbergroup</groupId>
+            <artifactId>soccer-server</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
